--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nick's Portfolio Site</title>
+    <title>About Me</title>
 </head>
 <body>
     <nav class="nav__container">
@@ -26,30 +26,61 @@
         </div>
     </nav>
 
-<section class="UX__skills">
-    <div class="section__container">
+<!-- MY UX SKILLS SECTION CODED USING CSS FLEX-->
+<section class="mySkills">
+   <h1>MY UX SKILLS</h1>
+    <div class="flexContainer">
+        <div class="UX__research">
+            <img src="/images/users.svg" height="140px" width="200px">
+            <h3>UX Research</h3>
+            <p>I'm able to help find the most effective ways to help the users through interviews, surveys, usability testing, and my keen observations skills.</p>
+        </div>
+        <div class="user__Empathy">
+        <img src="/images/user-empathy.svg" height="140px" width="175px">
+        <h3>User Empathy</h3>
+        <p>My strong listening skills and practicing user-centered design showcase my ability to gain empathy for a wide range of users.</p>
+        </div>
+        <div class="data__Analysis">
+            <img src="/images/clipboard-list.svg" height="146px" width="109px">
+            <h3>Data Synthesis & Analysis</h3>
+            <p>Developing affinity diagrams, empathy maps, and detailed personas using data and insights collected from research.</p>
+        </div>
+    </div>
+</section>
 
-        </div>
-    </div>
+<!-- MY UX SKILLS SECTION CODED USING CSS GRID-->
+<section class="myWork">
+    <h1>MY WORK</h1>
+        <div class="workGrid">
+            <div class="work__images">
+                <img src="/images/USDAlaptop.svg" height="300px" width="500px">
+            <div class="work__description">
+                <h4>USDA Homepage Redesign</h4>
+                <p>Creating a more approachable <br>and
+                    user-friendly government website concept.</p>
+                <button class="view__Work">VIEW PROJECT</button>
+            </div>
+            </div>
+            <div class="work__images">
+                <img src="/images/💻  Macbook.svg"height="300px" width="500px">
+            <div class="work__description">
+                <h4>CASE STUDY 2</h4>
+                <p>Lorem ipsum dolor sit amet, consetetur <br>sadipscing elitr, sed diam nonumy eirmod<br> tempor invidunt ut labore.</p>
+                <button class="view__Work">VIEW PROJECT</button>
+            </div>
+            </div>
+            <div class="work__images">
+                <img src="/images/💻  Macbook.svg"height="300px" width="500px">
+            <div class="work__description">
+                <h4>CASE STUDY 3</h4>
+                <p>Lorem ipsum dolor sit amet, consetetur<br> sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore.</p>
+                <button class="view__Work">VIEW PROJECT</button>
+            </div>
+            </div>
+        
+
 </section>
-<section class="portfolio__section">
-    <div class="header__portfolio">
-        <h1>PORTFOLIO</h1>
-        <p>My Latest UI/UX Work</p>
-    </div>
-    <div class="caseStudy1__border">
-        <div class="caseStudy1__text">
-            <h1>USDA</h1>
-            <h2>Homepage Redesign</h2>
-            <h4>UX/UI Design Project</h4>
-            <p class="caseStudy__paragraph">Creating an approachable and user-friendly government website concept. </p>
-        </div>
-    <div class="caseStudy1__images">
-        <img class="laptop" src="/images/USDAlaptop.svg">
-        <img class="mobile" src="/images/USDAmobile.svg" width="150px" height="300px">
-    </div>
-    </div>
-</section>
+
 
 <section class="connectWithMe">
     <div class="connect__Form">
