--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <nav class="nav__container">
      <div class="logo__container">
         <div class="logo">
-            <img src="/images/logo-white.svg" width="80px" height="95px">        
+            <img src="images/logo-white.svg" width="80px" height="95px">        
         </div>
         </div>
       <div class="navlinks__container">
@@ -42,7 +42,7 @@
     
     <div class="image__container">
         <div class="hero__image">
-            <img src="/images/mypic_1 copy.png" width="251px" height="657px">
+            <img src="images/mypic_1 copy.png" width="251px" height="657px">
         </div>
         </div>
         </div>
