--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>It can universally affect everyone regardless of their gender, skin color, religion, orientation, or background. <br> It has the ability to evoke a wide range of feelings and emotions in people all over the world, <br>a humbling reminder of our humanity. No matter what form it takes, design is ever-changing and evolving,<br> affording us the opportunities to learn and grow.</p>
         </div>
         <div class="design__logo">
-            <img src="/images/designicon.svg" height="400px" width="400px">
+            <img src="images/designicon.svg" height="400px" width="400px">
         </div>
     </div>
 </section>
@@ -74,8 +74,8 @@
             <p class="caseStudy__paragraph">Creating an approachable and user-friendly government website concept. </p>
         </div>
     <div class="caseStudy1__images">
-        <img class="laptop" src="/images/USDAlaptop.svg">
-        <img class="mobile" src="/images/USDAmobile.svg" width="150px" height="300px">
+        <img class="laptop" src="images/USDAlaptop.svg">
+        <img class="mobile" src="images/USDAmobile.svg" width="150px" height="300px">
     </div>
     </div>
 </section>
